# climate_change_on_sea_urchins

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  analysis.ipynb  app.py  config.py  data_LSTMS_bad2.csv  data_LSTMS_good2.csv  data_LSTMS_mean2.csv  data_ec50_ci.csv  data_extended.csv  dlnm_slice_lag.csv  explore_ccf.csv  explore_lag_scatter.csv  mhw_events.csv  mixed_effects_predictions.csv  narrative_sentinel_regime_shift.ipynb  paper.bib  paper.md  plan.md  pyproject.toml  requirements.txt  trend_CO2.csv  trend_EC50.csv  trend_O2.csv  trend_Salinity.csv  trend_Temperature.csv  trend_pH.csv
.streamlit/: config.toml
analysis/: 01_timeseries.py  02_period_split.py  03_correlations.py  04_stationarity.py  05_mhw_analysis.py  06_forecast.py  common.py  run_all.py
data/: data.csv  data_ec50_ci.csv  data_extended.csv  ec50_sheets.csv  env_copernicus.csv  mhw_annual.csv  mhw_events.csv  mhw_monthly.csv  sst_daily.csv
docs/: ADAPTING.md  MHW_ANALYSIS_RESEARCH.md
legacy/: analysis_2023_exploratory.ipynb
results/: ardl_response.csv  ccf_results.csv  ccf_results_diff.csv  ccf_results_prewhitened.csv  corr_all.csv  corr_post.csv  corr_pre.csv  corr_pval_all.csv  corr_pval_post.csv  corr_pval_pre.csv  cu_speciation_decomposition.csv  cu_speciation_summary.json  dist_CO2.csv  dist_EC50.csv  dist_O2.csv  dist_Salinity.csv  dist_Temperature.csv  dist_pH.csv  dlnm_lag_profile.csv  dlnm_results.csv  dlnm_slice_lag.csv  forecast_bad.csv  forecast_bio_bad.csv  forecast_bio_good.csv  forecast_bio_mean.csv  forecast_env_bad.csv  forecast_env_good.csv  forecast_env_mean.csv  forecast_good.csv  forecast_mean.csv  forecast_meta.json  granger_results.json  kruskal_stats.json  mhw_lag_annual.csv  mhw_lag_annual_summary.json  mhw_lag_correlations.csv  (+27 more)
(+36 files in other folders)
