[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "climate_change_on_sea_urchins"
version = "1.3.0"
description = "Open-source, FAIR pipeline integrating Copernicus Marine oceanographic data with biological sentinel bioassay data, with Paracentrotus lividus EC50 toxicity as a proof of concept"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Guido Scatena", email = "guido.scatena@unipi.it" },
    { name = "Andrea Gaion" },
    { name = "Davide Sartori" },
]
keywords = [
    "marine heatwaves",
    "climate change",
    "ecotoxicology",
    "open science",
    "FAIR data",
    "oceanography",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "streamlit>=1.35",
    "plotly>=5.18",
    "Pillow>=10.0",
]

[project.optional-dependencies]
acquisition = ["copernicusmarine", "xarray", "netcdf4", "h5netcdf"]
notebook = ["jupyter", "pmdarima>=2.0"]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/scatenag/climate_change_on_sea_urchins"
Repository = "https://github.com/scatenag/climate_change_on_sea_urchins"
Documentation = "https://github.com/scatenag/climate_change_on_sea_urchins/blob/main/docs/ADAPTING.md"

[project.scripts]
ccsu-run-pipeline = "climate_change_on_sea_urchins.pipeline:main"
ccsu-dashboard     = "climate_change_on_sea_urchins._launch_dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]
